--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "dialogflow": "^1.2.0",
+    "express": "^4.17.1",
+    "node": "^14.0.0",
+    "request": "^2.88.2",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {}
 }
