--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "pg": "^8.0.3",
+    "python-shell": "^2.0.0",
     "request": "^2.88.2",
     "url": "^0.11.0",
     "uuid": "^7.0.3"
